--- a/package.json
+++ b/package.json
@@ -10,39 +10,44 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.5.0",
-    "@tanstack/react-query": "^4.16.0",
-    "@trpc/client": "^10.0.0",
-    "@trpc/next": "^10.0.0",
-    "@trpc/react-query": "^10.0.0",
-    "@trpc/server": "^10.0.0",
-    "dayjs": "^1.11.6",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.7.1",
+    "@tanstack/react-query": "^4.20.4",
+    "@trpc/client": "^10.5.0",
+    "@trpc/next": "^10.5.0",
+    "@trpc/react-query": "^10.5.0",
+    "@trpc/server": "^10.5.0",
+    "dayjs": "^1.11.7",
     "next": "13.0.2",
-    "next-auth": "^4.15.1",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.26.0",
+    "@faker-js/faker": "^7.6.0",
+    "@tanstack/react-query-devtools": "^4.20.4",
+    "@types/node": "^18.11.15",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
     "eslint-config-next": "13.0.2",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4"
+    "prisma": "^4.7.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
     "initVersion": "6.10.3"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
